<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:text="PETUNJUK PENGGUNAAN"
        android:textSize="24sp"
        android:gravity="center_vertical"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="500dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Timbang Ayam"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableRow>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:text="1"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/petunjuk_timbang_ayam_1"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:text="2"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/petunjuk_timbang_ayam_2"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:text="3"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/petunjuk_timbang_ayam_3"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:text="4"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/petunjuk_timbang_ayam_4"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:text="5"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/petunjuk_timbang_ayam_5"
                        android:textSize="18sp" />
                </TableRow>
            </TableLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="Informasi Tambahan"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableRow>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:text="1"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/informasi_1"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:text="2"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/informasi_2"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:text="3"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/informasi_3"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:text="4"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/informasi_4"
                        android:textSize="18sp" />
                </TableRow>
            </TableLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>